# gaussian-elimination

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp  main.cu  transactions.txt
include/: algorithm.h  elimination.cuh  foata.h  graphs.h  transaction.cuh  transaction.h
src/: algorithm.cpp  elimination.cu  foata.cpp  graphs.cpp  transaction.cpp  transaction.cu
